# substrate-offchain-worker-demo

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
node/: Cargo.toml
node/src/: command.rs  service.rs
ocw-common/: Cargo.toml
ocw-common/src/: lib.rs
pallets/example-offchain-worker/: Cargo.toml
pallets/example-offchain-worker/src/: lib.rs
pallets/mobile-registry/: Cargo.toml
pallets/mobile-registry/src/: lib.rs  mock.rs  tests.rs
pallets/ocw/: Cargo.toml  build.rs
pallets/ocw-circuits/: Cargo.toml  build.rs
pallets/ocw-circuits/src/: lib.rs  tests.rs
pallets/ocw-garble/: Cargo.toml
pallets/ocw-garble/src/: lib.rs
pallets/ocw/src/: lib.rs
pallets/tx-validation/: Cargo.toml
pallets/tx-validation/src/: lib.rs  mock.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
