[package]
name = "ocw-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.14", default-features = false }
base64 = { default-features = false, features = ["alloc"], version = "0.13" }
bytes = { version = "1.1.0", default-features = false }
# https://github.com/tokio-rs/prost#using-prost-in-a-no_std-crate
prost = { version = "0.9", default-features = false, features = ["prost-derive"] }
# "Only necessary if using Protobuf well-known types:"
# prost-types = { version = "0.9", default-features = false }

sp-io = { default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
sp-std = { default-features = false, version = "4.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }

[features]
default = ["std"]
std = [
	"sp-io/std",
	"sp-runtime/std",
    "sp-std/std",
]